--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -1427,13 +1427,13 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="live_started_ago">লাইভ %1$s মিনিট আগে শুরু  হয়েছে</string>
   <string name="live_watching_count">%1$d জন লাইভ সেশন দেখছেন </string>
   <string name="blogger_gold">Blogger Gold</string>
-  <string name="my_dashboard">My Dashboard</string>
+  <string name="my_dashboard">আমার ড্যাশবোর্ড </string>
   <string name="start_creating_text">আমরা দেখতে পাচ্ছি যে আপনি এখনও অবধি কিছু ক্রিয়েট করেননি</string>
   <string name="start_creating_btn">ক্রিয়েট করা শুরু করুন </string>
   <string name="leaderboard_text">লিডারবোর্ড দেখার জন্য নিচে ক্লিক করুন </string>
   <string name="leaderboard_btn">View Leaderboard</string>
-  <string name="total_blog_view">Total Blog views</string>
-  <string name="total_vlog_view">Total Vlog view</string>
+  <string name="total_blog_view">সর্বমোট অর্গানিক ব্লগ ভিউজ </string>
+  <string name="total_vlog_view">সর্বমোট অর্গানিক ভিলগস ভিউজ </string>
   <string name="leaderboard">Leaderboard</string>
   <string name="leaderboard_blogs">BLOGS</string>
   <string name="leaderboard_vlogs">VLOG</string>
@@ -1472,4 +1472,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_join">যোগ দিন</string>
   <string name="explore_self">আমি নিজেই আবিষ্কার করব</string>
   <string name="home_onboarding_title">আপনি কী ভাবে শুরু করতে চান?</string>
+  <string name="empty_leaderboard_text">লিডারবোর্ড এখনও তৈরি হয়নি। দয়া করে আগামীকাল ফিরে আসুন।</string>
+  <string name="yesterday">গতকাল </string>
 </resources>
