--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -1483,13 +1483,13 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="live_started_ago">ਲਾਈਵ %1$s ਮਿੰਟ ਪਹਿਲਾਂ ਸ਼ੁਰੂ ਹੋਇਆ</string>
   <string name="live_watching_count">%1$d ਲੋਕ ਦੇਖ ਰਹੇ ਹਨ</string>
   <string name="blogger_gold">Blogger Gold</string>
-  <string name="my_dashboard">My Dashboard</string>
+  <string name="my_dashboard">ਮੇਰਾ ਡੈਸ਼ਬੋਰਡ</string>
   <string name="start_creating_text">ਅਜਿਹਾ ਲਗਦਾ ਹੈ ਕਿ ਤੁਸੀਂ ਕੁਝ ਨਹੀਂ ਬਣਾਇਆ</string>
   <string name="start_creating_btn">ਬਣਾਉਣਾ ਸ਼ੁਰੂ ਕਰੋ</string>
   <string name="leaderboard_text">ਲੀਡਰਬੋਰਡ ਦੇਖਣ ਲਈ ਹੇਠਾਂ ਕਲਿੱਕ ਕਰੋ</string>
   <string name="leaderboard_btn">View Leaderboard</string>
-  <string name="total_blog_view">Total Blog views</string>
-  <string name="total_vlog_view">Total Vlog view</string>
+  <string name="total_blog_view">ਕੁੱਲ ਬਲੌਗ ਵਿਊਜ</string>
+  <string name="total_vlog_view">ਕੁੱਲ ਵੀ-ਲੌਗ ਵਿਊਜ</string>
   <string name="leaderboard">Leaderboard</string>
   <string name="leaderboard_blogs">BLOGS</string>
   <string name="leaderboard_vlogs">VLOG</string>
@@ -1528,4 +1528,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_join">ਜੁੜੋ</string>
   <string name="explore_self">ਮੈਂ ਆਪਣੇ ਆਪ ਐਕਸਪਲੋਰ ਕਰਾਂਗੀ</string>
   <string name="home_onboarding_title">ਤੁਸੀਂ ਆਪਣੀ ਯਾਤਰਾ ਕਿਵੇਂ ਅਰੰਭ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ ?</string>
+  <string name="empty_leaderboard_text">ਲੀਡਰਬੋਰਡ ਅਜੇ ਤਿਆਰ ਨਹੀਂ ਕੀਤਾ ਗਿਆ ਹੈ. ਕੱਲ੍ਹ ਵਾਪਸ ਆਓ ਜੀ.</string>
+  <string name="yesterday">ਕੱਲ</string>
 </resources>
