--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1588,8 +1588,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="start_creating_btn">Start Creating</string>
   <string name="leaderboard_text">See who\'s leading the race!</string>
   <string name="leaderboard_btn">View Leaderboard</string>
-  <string name="total_blog_view">Total Blog views</string>
-  <string name="total_vlog_view">Total Vlog view</string>
+  <string name="total_blog_view">Total organic blog views</string>
+  <string name="total_vlog_view">Total organic vlog views</string>
   <string name="leaderboard">Leaderboard</string>
   <string name="leaderboard_blogs">BLOGS</string>
   <string name="leaderboard_vlogs">VLOG</string>
@@ -1628,5 +1628,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_join">Join</string>
   <string name="explore_self">I\'ll explore on my own</string>
   <string name="home_onboarding_title">how do you wish to start your journey?</string>
+  <string name="empty_leaderboard_text">Leaderboard is not yet generated. Please come back tomorrow.</string>
+  <string name="yesterday">Yesterday</string>
 </resources>
 
