--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -1448,15 +1448,15 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="blogger_gold_about_text6">It’s that simple. The higher the number of organic views of your blogs/vlogs, the higher YOUR share of the 5 Lakhs you will receive! </string>
   <string name="blogger_gold_about_text7">விவரங்களுக்கு படியுங்கள்</string>
   <string name="blogger_gold_about_text8">கொண்டாட்டத்திற்கு தயாராகிவிட்டிர்களா?எதற்காக காத்துக்கொண்டிருக்கிறீர்கள்? இப்போதே படைப்புகளை உருவாக்கி, பகிர்ந்து பணத்தை ஈட்டும் வாய்ப்பினை பயன்படுத்திக்கொள்ளுங்கள்.</string>
-  <string name="lang_sel_express_yourself">உங்களின் உணர்ச்சிகளை 10 மொழிகளில்  வெளிப்படுத்தலாம்</string>
+  <string name="lang_sel_express_yourself">10 மொழிகளில் வெளிப்படுத்துங்கள்</string>
   <string name="select_language">மொழியை தேர்ந்தெடு</string>
-  <string name="login_or_sign_up">உள்நுழை (அ) பதிவு செய்</string>
-  <string name="login_subheading">படைப்பு உருவாக்க, படிக்க, பணம் ஈட்ட மற்றும் 32.மி அம்மாக்கள் நிறைந்த ‌தளத்தில் இணைய </string>
+  <string name="login_or_sign_up">உள் நுழைய /பதிவு செய்ய</string>
+  <string name="login_subheading">உருவாக்க, படிக்க, பணம் ஈட்ட மற்றும் 32.மி அம்மாக்கள்  இருக்கும் தளத்தில் சேர</string>
   <string name="welcome_user">வணக்கம் %1$s,</string>
-  <string name="home_onboarding_consume">5.ல வலைப்பதிவுகள் மற்றும் கதைகளை படிக்கலாம் (அ ) வீடியோக்களை காணலாம்.</string>
-  <string name="home_onboarding_create">பதிவுகள், கதைகள் அல்லது காணொளிகள் மூலமாக உங்கள் எண்ணங்களை  வெளிப்படுத்தலாம்</string>
+  <string name="home_onboarding_consume">5 லட்ச வலைப்பதிவுகள், கதைகள் மற்றும் காணொளிகளைக் காண</string>
+  <string name="home_onboarding_create">வலைப்பதிவுகள், கதைகள் மற்றும் காணொளிகளை உருவாக்க</string>
   <string name="home_onboarding_mymoney">MyMoney பிரச்சாரத்தில் பங்கேற்று பணம் ஈட்டுங்கள்</string>
-  <string name="home_onboarding_groups">ஆதரவுக்க குழுக்கள் வாயிலாக ஆதரவு பெறலாம் அல்லது ஆதரவு அளிக்கலாம் </string>
+  <string name="home_onboarding_groups">ஆதரவுக் குழுக்களிடம் இருந்து ஆதரவு பெற</string>
   <string name="all_create">உருவாக்க </string>
   <string name="all_read">படிக்க </string>
   <string name="all_earn">ஈட்ட </string>
@@ -1465,4 +1465,17 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="home_onboarding_title">உங்களின் பயணத்தை எவ்வாறு தொடங்க விரும்புகிறீர்கள்?</string>
   <string name="empty_leaderboard_text">லீடர்போர்டு இன்னும் உருவாக்கப்படவில்லை. தயவுசெய்து நாளை திரும்பி வாருங்கள்.</string>
   <string name="yesterday">நேற்று</string>
+  <string name="take_tour">TAKE THE TOUR</string>
+  <string name="coachmark_article_1">Let us help you create your first blog! Select a challenge to start with or simply click on start writing</string>
+  <string name="coachmark_article_2">You can add images and format the content as per your need</string>
+  <string name="coachmark_article_3">Once done publish your story</string>
+  <string name="coachmark_article_4">Tags help Moms discover your blog.</string>
+  <string name="coachmark_article_5">Blogs with an interesting image get more readership.</string>
+  <string name="yay_all_done">Yay! You are all done!</string>
+  <string name="view_moderation_guidelines">View Moderation Guidelines</string>
+  <string name="get_tips_ideas">Get tips or ideas from other creators</string>
+  <string name="dont_stop_magic">Don\'t stop all the magic you were creating</string>
+  <string name="join_creator_group">Join Creator\'s Hangout</string>
+  <string name="create_more">Create More</string>
+  <string name="go_to_blog">Go to your Blog</string>
 </resources>
