--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -1474,4 +1474,17 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="home_onboarding_title">আপনি কী ভাবে শুরু করতে চান?</string>
   <string name="empty_leaderboard_text">লিডারবোর্ড এখনও তৈরি হয়নি। দয়া করে আগামীকাল ফিরে আসুন।</string>
   <string name="yesterday">গতকাল </string>
+  <string name="take_tour">TAKE THE TOUR</string>
+  <string name="coachmark_article_1">Let us help you create your first blog! Select a challenge to start with or simply click on start writing</string>
+  <string name="coachmark_article_2">You can add images and format the content as per your need</string>
+  <string name="coachmark_article_3">Once done publish your story</string>
+  <string name="coachmark_article_4">Tags help Moms discover your blog.</string>
+  <string name="coachmark_article_5">Blogs with an interesting image get more readership.</string>
+  <string name="yay_all_done">Yay! You are all done!</string>
+  <string name="view_moderation_guidelines">View Moderation Guidelines</string>
+  <string name="get_tips_ideas">Get tips or ideas from other creators</string>
+  <string name="dont_stop_magic">Don\'t stop all the magic you were creating</string>
+  <string name="join_creator_group">Join Creator\'s Hangout</string>
+  <string name="create_more">Create More</string>
+  <string name="go_to_blog">Go to your Blog</string>
 </resources>
