--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1592,7 +1592,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="total_vlog_view">Total organic vlog views</string>
   <string name="leaderboard">Leaderboard</string>
   <string name="leaderboard_blogs">BLOGS</string>
-  <string name="leaderboard_vlogs">VLOG</string>
+  <string name="leaderboard_vlogs">VLOGS</string>
   <string name="webview_hack_text">Hacks to get Organic Traffic to your blogs &amp; vlogs:</string>
   <string name="webview_term_text">Terms and Conditions</string>
   <string name="earning_calculator">Earning Calculator</string>
@@ -1627,8 +1627,21 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_earn">Earn</string>
   <string name="all_join">Join</string>
   <string name="explore_self">I\'ll explore on my own</string>
-  <string name="home_onboarding_title">how do you wish to start your journey?</string>
   <string name="empty_leaderboard_text">Leaderboard is not yet generated. Please come back tomorrow.</string>
   <string name="yesterday">Yesterday</string>
+  <string name="home_onboarding_title">How do you wish to start your journey?</string>
+  <string name="take_tour">TAKE THE TOUR</string>
+  <string name="coachmark_article_1">Let us help you create your first blog! Select a challenge to start with or simply click on start writing</string>
+  <string name="coachmark_article_2">You can add images and format the content as per your need</string>
+  <string name="coachmark_article_3">Once done publish your story</string>
+  <string name="coachmark_article_4">Tags help Moms discover your blog.</string>
+  <string name="coachmark_article_5">Blogs with an interesting image get more readership.</string>
+  <string name="yay_all_done">Yay! You are all done!</string>
+  <string name="view_moderation_guidelines">View Moderation Guidelines</string>
+  <string name="get_tips_ideas">Get tips or ideas from other creators</string>
+  <string name="dont_stop_magic">Don\'t stop all the magic you were creating</string>
+  <string name="join_creator_group">Join Creator\'s Hangout</string>
+  <string name="create_more">Create More</string>
+  <string name="go_to_blog">Go to your Blog</string>
 </resources>
 
